@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2003, 2016, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2003, 2026, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -22,21 +22,7 @@
  */
 package org.xml.sax.ptests;
 
-import static jaxp.library.JAXPTestUtilities.USER_DIR;
-import static jaxp.library.JAXPTestUtilities.compareWithGold;
-import static org.testng.Assert.assertTrue;
-import static org.xml.sax.ptests.SAXTestConst.GOLDEN_DIR;
-import static org.xml.sax.ptests.SAXTestConst.XML_DIR;
-
-import java.io.BufferedWriter;
-import java.io.FileInputStream;
-import java.io.FileWriter;
-import java.io.IOException;
-
-import javax.xml.parsers.SAXParserFactory;
-
-import org.testng.annotations.Listeners;
-import org.testng.annotations.Test;
+import org.junit.jupiter.api.Test;
 import org.xml.sax.Attributes;
 import org.xml.sax.InputSource;
 import org.xml.sax.Locator;
@@ -45,6 +31,18 @@ import org.xml.sax.SAXParseException;
 import org.xml.sax.XMLReader;
 import org.xml.sax.helpers.XMLFilterImpl;
 
+import javax.xml.parsers.SAXParserFactory;
+import java.io.BufferedWriter;
+import java.io.FileInputStream;
+import java.io.FileWriter;
+import java.io.IOException;
+import java.nio.file.Files;
+import java.nio.file.Path;
+
+import static org.junit.jupiter.api.Assertions.assertLinesMatch;
+import static org.xml.sax.ptests.SAXTestConst.GOLDEN_DIR;
+import static org.xml.sax.ptests.SAXTestConst.XML_DIR;
+
 /**
  * Set parent of XMLFilter to XMLReader. Parsing on XML file will invoke XMLFilter
  * to write to output file. Test verifies output is same as the golden file.
@@ -52,19 +50,15 @@ import org.xml.sax.helpers.XMLFilterImpl;
 /*
  * @test
  * @library /javax/xml/jaxp/libs
- * @run testng/othervm -DrunSecMngr=true -Djava.security.manager=allow org.xml.sax.ptests.XMLFilterCBTest
- * @run testng/othervm org.xml.sax.ptests.XMLFilterCBTest
+ * @run junit/othervm org.xml.sax.ptests.XMLFilterCBTest
  */
-@Test
-@Listeners({jaxp.library.FilePolicy.class})
 public class XMLFilterCBTest {
     /**
      * Test XMLFilter working with XML reader.
-     *
-     * @throws Exception If any errors occur.
      */
+    @Test
     public void testXMLFilterCB() throws Exception {
-        String outputFile = USER_DIR + "XMLFilter.out";
+        String outputFile = "XMLFilter.out";
         String goldFile = GOLDEN_DIR + "XMLFilterGF.out";
         String xmlFile = XML_DIR + "namespace1.xml";
 
@@ -77,7 +71,9 @@ public class XMLFilterCBTest {
             myXmlFilter.parse(new InputSource(fis));
         }
         // Need close the output file before we compare it with golden file.
-        assertTrue(compareWithGold(goldFile, outputFile));
+        assertLinesMatch(
+                Files.readAllLines(Path.of(goldFile)),
+                Files.readAllLines(Path.of(outputFile)));
     }
 }
 
@@ -106,7 +102,6 @@ class MyXMLFilter extends XMLFilterImpl implements AutoCloseable {
     /**
      * Write characters tag along with content of characters when meet
      * characters event.
-     * @throws IOException error happen when writing file.
      */
     @Override
     public void characters(char[] ch, int start, int length) throws SAXException {
@@ -117,7 +112,6 @@ class MyXMLFilter extends XMLFilterImpl implements AutoCloseable {
     /**
      * Write endDocument tag then flush the content and close the file when meet
      * endDocument event.
-     * @throws IOException error happen when writing file or closing file.
      */
     @Override
     public void endDocument() throws SAXException {
@@ -133,7 +127,6 @@ class MyXMLFilter extends XMLFilterImpl implements AutoCloseable {
     /**
      * Write endElement tag with namespaceURI, localName, qName to the file when
      * meet endElement event.
-     * @throws IOException error happen when writing file.
      */
     @Override
     public void endElement(String namespaceURI,String localName,String qName)
@@ -145,7 +138,6 @@ class MyXMLFilter extends XMLFilterImpl implements AutoCloseable {
     /**
      * Write endPrefixMapping tag along with prefix to the file when meet
      * endPrefixMapping event.
-     * @throws IOException error happen when writing file.
      */
     @Override
     public void endPrefixMapping(String prefix) throws SAXException {
@@ -155,7 +147,6 @@ class MyXMLFilter extends XMLFilterImpl implements AutoCloseable {
     /**
      * Write error tag along with exception to the file when meet recoverable
      * error event.
-     * @throws IOException error happen when writing file.
      */
     @Override
     public void error(SAXParseException e) throws SAXException {
@@ -165,7 +156,6 @@ class MyXMLFilter extends XMLFilterImpl implements AutoCloseable {
     /**
      * Write fatalError tag along with exception to the file when meet
      * unrecoverable error event.
-     * @throws IOException error happen when writing file.
      */
     @Override
     public void fatalError(SAXParseException e) throws SAXException {
@@ -174,7 +164,6 @@ class MyXMLFilter extends XMLFilterImpl implements AutoCloseable {
 
     /**
      * Write warning tag along with exception to the file when meet warning event.
-     * @throws IOException error happen when writing file.
      */
     @Override
     public void warning(SAXParseException e) throws SAXException {
@@ -184,7 +173,6 @@ class MyXMLFilter extends XMLFilterImpl implements AutoCloseable {
     /**
      * Write ignorableWhitespace tag along with white spaces when meet
      * ignorableWhitespace event.
-     * @throws IOException error happen when writing file.
      */
     @Override
     public void ignorableWhitespace(char[] ch, int start, int length)
@@ -197,7 +185,6 @@ class MyXMLFilter extends XMLFilterImpl implements AutoCloseable {
     /**
      * Write processingInstruction tag along with target name and target data
      * when meet processingInstruction event.
-     * @throws IOException error happen when writing file.
      */
     @Override
     public void processingInstruction(String target, String data)
@@ -221,7 +208,6 @@ class MyXMLFilter extends XMLFilterImpl implements AutoCloseable {
     /**
      * Write skippedEntity tag along with entity name when meet skippedEntity
      * event.
-     * @throws IOException error happen when writing file.
      */
     @Override
     public void skippedEntity(String name) throws SAXException {
@@ -230,7 +216,6 @@ class MyXMLFilter extends XMLFilterImpl implements AutoCloseable {
 
     /**
      * Write startDocument tag when meet startDocument event.
-     * @throws IOException error happen when writing file.
      */
     @Override
     public void startDocument() throws SAXException {
@@ -240,7 +225,6 @@ class MyXMLFilter extends XMLFilterImpl implements AutoCloseable {
     /**
      * Write startElement tag along with namespaceURI, localName, qName, number
      * of attributes and line number when meet startElement event.
-     * @throws IOException error happen when writing file.
      */
     @Override
     public void startElement(String namespaceURI, String localName,
@@ -253,7 +237,6 @@ class MyXMLFilter extends XMLFilterImpl implements AutoCloseable {
     /**
      * Write startPrefixMapping tag along with prefix and uri when meet
      * startPrefixMapping event.
-     * @throws IOException error happen when writing file.
      */
     @Override
     public void startPrefixMapping(String prefix, String uri) throws SAXException {
