@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2014, 2016, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2014, 2026, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -23,8 +23,7 @@
 
 package datatype;
 
-import java.math.BigDecimal;
-import java.math.BigInteger;
+import org.junit.jupiter.api.Test;
 
 import javax.xml.datatype.DatatypeConfigurationException;
 import javax.xml.datatype.DatatypeConstants;
@@ -32,19 +31,17 @@ import javax.xml.datatype.DatatypeFactory;
 import javax.xml.datatype.Duration;
 import javax.xml.datatype.XMLGregorianCalendar;
 import javax.xml.namespace.QName;
+import java.math.BigDecimal;
+import java.math.BigInteger;
 
-import org.testng.Assert;
-import org.testng.annotations.Listeners;
-import org.testng.annotations.Test;
+import static org.junit.jupiter.api.Assertions.fail;
 
 /*
  * @test
  * @library /javax/xml/jaxp/libs /javax/xml/jaxp/unittest
- * @run testng/othervm -DrunSecMngr=true -Djava.security.manager=allow datatype.DatatypeFactoryTest
- * @run testng/othervm datatype.DatatypeFactoryTest
+ * @run junit/othervm datatype.DatatypeFactoryTest
  * @summary Test DatatypeFactory.
  */
-@Listeners({jaxp.library.BasePolicy.class})
 public class DatatypeFactoryTest {
 
     private static final boolean DEBUG = false;
@@ -123,7 +120,7 @@ public class DatatypeFactoryTest {
         try {
             datatypeFactory = DatatypeFactory.newInstance();
         } catch (DatatypeConfigurationException datatypeConfigurationException) {
-            Assert.fail(datatypeConfigurationException.toString());
+            fail(datatypeConfigurationException.toString());
         }
 
         if (DEBUG) {
@@ -147,20 +144,20 @@ public class DatatypeFactoryTest {
 
                 // was this expected to fail?
                 if (TEST_VALUES_MILLISECONDS_RESULTS[onTestValue].equals(TEST_VALUE_FAIL)) {
-                    Assert.fail("the value \"" + TEST_VALUES_MILLISECONDS[onTestValue] + "\" is invalid yet it created the Duration \"" + duration.toString()
+                    fail("the value \"" + TEST_VALUES_MILLISECONDS[onTestValue] + "\" is invalid yet it created the Duration \"" + duration.toString()
                             + "\"");
                 }
 
                 // right XMLSchemaType?
                 QName xmlSchemaType = duration.getXMLSchemaType();
                 if (!xmlSchemaType.equals(DatatypeConstants.DURATION)) {
-                    Assert.fail("Duration created with XMLSchemaType of\"" + xmlSchemaType + "\" was expected to be \"" + DatatypeConstants.DURATION
+                    fail("Duration created with XMLSchemaType of\"" + xmlSchemaType + "\" was expected to be \"" + DatatypeConstants.DURATION
                             + "\" and has the value \"" + duration.toString() + "\"");
                 }
 
                 // does it have the right value?
                 if (!TEST_VALUES_MILLISECONDS_RESULTS[onTestValue].equals(duration.toString())) {
-                    Assert.fail("Duration created with \"" + TEST_VALUES_MILLISECONDS[onTestValue] + "\" was expected to be \""
+                    fail("Duration created with \"" + TEST_VALUES_MILLISECONDS[onTestValue] + "\" was expected to be \""
                             + TEST_VALUES_MILLISECONDS_RESULTS[onTestValue] + "\" and has the value \"" + duration.toString() + "\"");
                 }
 
@@ -173,7 +170,7 @@ public class DatatypeFactoryTest {
 
                 // was this expected to succed?
                 if (!TEST_VALUES_MILLISECONDS_RESULTS[onTestValue].equals(TEST_VALUE_FAIL)) {
-                    Assert.fail("the value \"" + TEST_VALUES_MILLISECONDS[onTestValue] + "\" is valid yet it failed with \"" + exception.toString() + "\"");
+                    fail("the value \"" + TEST_VALUES_MILLISECONDS[onTestValue] + "\" is valid yet it failed with \"" + exception.toString() + "\"");
                 }
                 // expected failure
             }
@@ -198,7 +195,7 @@ public class DatatypeFactoryTest {
         try {
             datatypeFactory = DatatypeFactory.newInstance();
         } catch (DatatypeConfigurationException datatypeConfigurationException) {
-            Assert.fail(datatypeConfigurationException.toString());
+            fail(datatypeConfigurationException.toString());
         }
 
         if (DEBUG) {
@@ -221,7 +218,7 @@ public class DatatypeFactoryTest {
 
                 // was this expected to fail?
                 if (TEST_VALUES_LEXICAL[onTestValue + 1].equals(TEST_VALUE_FAIL)) {
-                    Assert.fail("the value \"" + TEST_VALUES_LEXICAL[onTestValue] + "\" is invalid yet it created the Duration \"" + duration.toString() + "\"");
+                    fail("the value \"" + TEST_VALUES_LEXICAL[onTestValue] + "\" is invalid yet it created the Duration \"" + duration.toString() + "\"");
                 }
 
                 // right XMLSchemaType?
@@ -230,7 +227,7 @@ public class DatatypeFactoryTest {
                 try {
                     QName xmlSchemaType = duration.getXMLSchemaType();
                     if (!xmlSchemaType.equals(DatatypeConstants.DURATION_YEARMONTH)) {
-                        Assert.fail("Duration created with XMLSchemaType of\"" + xmlSchemaType + "\" was expected to be \""
+                        fail("Duration created with XMLSchemaType of\"" + xmlSchemaType + "\" was expected to be \""
                                 + DatatypeConstants.DURATION_YEARMONTH + "\" and has the value \"" + duration.toString() + "\"");
                     }
                 } catch (IllegalStateException illegalStateException) {
@@ -240,7 +237,7 @@ public class DatatypeFactoryTest {
 
                 // does it have the right value?
                 if (!TEST_VALUES_LEXICAL[onTestValue + 1].equals(duration.toString())) {
-                    Assert.fail("Duration created with \"" + TEST_VALUES_LEXICAL[onTestValue] + "\" was expected to be \""
+                    fail("Duration created with \"" + TEST_VALUES_LEXICAL[onTestValue] + "\" was expected to be \""
                             + TEST_VALUES_LEXICAL[onTestValue + 1] + "\" and has the value \"" + duration.toString() + "\"");
                 }
 
@@ -253,7 +250,7 @@ public class DatatypeFactoryTest {
 
                 // was this expected to succed?
                 if (!TEST_VALUES_LEXICAL[onTestValue + 1].equals(TEST_VALUE_FAIL)) {
-                    Assert.fail("the value \"" + TEST_VALUES_LEXICAL[onTestValue] + "\" is valid yet it failed with \"" + exception.toString() + "\"");
+                    fail("the value \"" + TEST_VALUES_LEXICAL[onTestValue] + "\" is valid yet it failed with \"" + exception.toString() + "\"");
                 }
                 // expected failure
             }
@@ -290,7 +287,7 @@ public class DatatypeFactoryTest {
         try {
             datatypeFactory = DatatypeFactory.newInstance();
         } catch (DatatypeConfigurationException datatypeConfigurationException) {
-            Assert.fail(datatypeConfigurationException.toString());
+            fail(datatypeConfigurationException.toString());
         }
 
         if (DEBUG) {
@@ -314,20 +311,20 @@ public class DatatypeFactoryTest {
 
                 // was this expected to fail?
                 if (TEST_VALUES_MILLISECONDS_RESULTS[onTestValue].equals(TEST_VALUE_FAIL)) {
-                    Assert.fail("the value \"" + TEST_VALUES_MILLISECONDS[onTestValue] + "\" is invalid yet it created the Duration \"" + duration.toString()
+                    fail("the value \"" + TEST_VALUES_MILLISECONDS[onTestValue] + "\" is invalid yet it created the Duration \"" + duration.toString()
                             + "\"");
                 }
 
                 // right XMLSchemaType?
                 QName xmlSchemaType = duration.getXMLSchemaType();
                 if (!xmlSchemaType.equals(DatatypeConstants.DURATION_YEARMONTH)) {
-                    Assert.fail("Duration created with XMLSchemaType of\"" + xmlSchemaType + "\" was expected to be \"" + DatatypeConstants.DURATION_YEARMONTH
+                    fail("Duration created with XMLSchemaType of\"" + xmlSchemaType + "\" was expected to be \"" + DatatypeConstants.DURATION_YEARMONTH
                             + "\" and has the value \"" + duration.toString() + "\"");
                 }
 
                 // does it have the right value?
                 if (!TEST_VALUES_MILLISECONDS_RESULTS[onTestValue].equals(duration.toString())) {
-                    Assert.fail("Duration created with \"" + TEST_VALUES_MILLISECONDS[onTestValue] + "\" was expected to be \""
+                    fail("Duration created with \"" + TEST_VALUES_MILLISECONDS[onTestValue] + "\" was expected to be \""
                             + TEST_VALUES_MILLISECONDS_RESULTS[onTestValue] + "\" and has the value \"" + duration.toString() + "\"");
                 }
 
@@ -336,7 +333,7 @@ public class DatatypeFactoryTest {
                 int hours = duration.getHours();
                 int minutes = duration.getMinutes();
                 if (days != 0 || hours != 0 || minutes != 0) {
-                    Assert.fail("xdt:yearMonthDuration created without discarding remaining milliseconds: " + " days = " + days + ", hours = " + hours
+                    fail("xdt:yearMonthDuration created without discarding remaining milliseconds: " + " days = " + days + ", hours = " + hours
                             + ", minutess = " + minutes);
                 }
 
@@ -349,7 +346,7 @@ public class DatatypeFactoryTest {
 
                 // was this expected to succed?
                 if (!TEST_VALUES_MILLISECONDS_RESULTS[onTestValue].equals(TEST_VALUE_FAIL)) {
-                    Assert.fail("the value \"" + TEST_VALUES_MILLISECONDS[onTestValue] + "\" is valid yet it failed with \"" + exception.toString() + "\"");
+                    fail("the value \"" + TEST_VALUES_MILLISECONDS[onTestValue] + "\" is valid yet it failed with \"" + exception.toString() + "\"");
                 }
                 // expected failure
             }
@@ -385,7 +382,7 @@ public class DatatypeFactoryTest {
         try {
             datatypeFactory = DatatypeFactory.newInstance();
         } catch (DatatypeConfigurationException datatypeConfigurationException) {
-            Assert.fail(datatypeConfigurationException.toString());
+            fail(datatypeConfigurationException.toString());
         }
 
         if (DEBUG) {
@@ -409,7 +406,7 @@ public class DatatypeFactoryTest {
 
                 // was this expected to fail?
                 if (TEST_VALUES_MILLISECONDS_RESULTS[onTestValue].equals(TEST_VALUE_FAIL)) {
-                    Assert.fail("the value \"" + TEST_VALUES_MILLISECONDS[onTestValue] + "\" is invalid yet it created the Duration \"" + duration.toString()
+                    fail("the value \"" + TEST_VALUES_MILLISECONDS[onTestValue] + "\" is invalid yet it created the Duration \"" + duration.toString()
                             + "\"");
                 }
 
@@ -417,7 +414,7 @@ public class DatatypeFactoryTest {
                 if (!TEST_VALUES_MILLISECONDS_RESULTS[onTestValue].equals(duration.toString())) {
                     // TODO: this is bug that should be fixed
                     if (false) {
-                        Assert.fail("Duration created with \"" + TEST_VALUES_MILLISECONDS[onTestValue] + "\" was expected to be \""
+                        fail("Duration created with \"" + TEST_VALUES_MILLISECONDS[onTestValue] + "\" was expected to be \""
                                 + TEST_VALUES_MILLISECONDS_RESULTS[onTestValue] + "\" and has the value \"" + duration.toString() + "\"");
                     } else {
                         System.err.println("Please fix this bug: " + "Duration created with \"" + TEST_VALUES_MILLISECONDS[onTestValue]
@@ -434,7 +431,7 @@ public class DatatypeFactoryTest {
                 if (!xmlSchemaType.equals(DatatypeConstants.DURATION_DAYTIME) || years != 0 || months != 0) {
                     // TODO: this is bug that should be fixed
                     if (false) {
-                        Assert.fail("xdt:dayTimeDuration created without discarding remaining milliseconds: " + " XMLSchemaType = " + xmlSchemaType
+                        fail("xdt:dayTimeDuration created without discarding remaining milliseconds: " + " XMLSchemaType = " + xmlSchemaType
                                 + ", years = " + years + ", months = " + months);
                     } else {
                         System.err.println("Please fix this bug: " + "xdt:dayTimeDuration created without discarding remaining milliseconds: "
@@ -451,7 +448,7 @@ public class DatatypeFactoryTest {
 
                 // was this expected to succed?
                 if (!TEST_VALUES_MILLISECONDS_RESULTS[onTestValue].equals(TEST_VALUE_FAIL)) {
-                    Assert.fail("the value \"" + TEST_VALUES_MILLISECONDS[onTestValue] + "\" is valid yet it failed with \"" + exception.toString() + "\"");
+                    fail("the value \"" + TEST_VALUES_MILLISECONDS[onTestValue] + "\" is valid yet it failed with \"" + exception.toString() + "\"");
                 }
                 // expected failure
             }
@@ -485,7 +482,7 @@ public class DatatypeFactoryTest {
         try {
             datatypeFactory = DatatypeFactory.newInstance();
         } catch (DatatypeConfigurationException datatypeConfigurationException) {
-            Assert.fail(datatypeConfigurationException.toString());
+            fail(datatypeConfigurationException.toString());
         }
 
         if (DEBUG) {
@@ -508,13 +505,13 @@ public class DatatypeFactoryTest {
 
                 // was this expected to fail?
                 if (TEST_VALUES_LEXICAL[onTestValue + 1].equals(TEST_VALUE_FAIL)) {
-                    Assert.fail("the value \"" + TEST_VALUES_LEXICAL[onTestValue] + "\" is invalid yet it created the XMLGregorianCalendar \""
+                    fail("the value \"" + TEST_VALUES_LEXICAL[onTestValue] + "\" is invalid yet it created the XMLGregorianCalendar \""
                             + xmlGregorianCalendar.toString() + "\"");
                 }
 
                 // does it have the right value?
                 if (!TEST_VALUES_LEXICAL[onTestValue + 1].equals(xmlGregorianCalendar.toString())) {
-                    Assert.fail("XMLGregorianCalendar created with \"" + TEST_VALUES_LEXICAL[onTestValue] + "\" was expected to be \""
+                    fail("XMLGregorianCalendar created with \"" + TEST_VALUES_LEXICAL[onTestValue] + "\" was expected to be \""
                             + TEST_VALUES_LEXICAL[onTestValue + 1] + "\" and has the value \"" + xmlGregorianCalendar.toString() + "\"");
                 }
 
@@ -527,7 +524,7 @@ public class DatatypeFactoryTest {
 
                 // was this expected to succed?
                 if (!TEST_VALUES_LEXICAL[onTestValue + 1].equals(TEST_VALUE_FAIL)) {
-                    Assert.fail("the value \"" + TEST_VALUES_LEXICAL[onTestValue] + "\" is valid yet it failed with \"" + exception.toString() + "\"");
+                    fail("the value \"" + TEST_VALUES_LEXICAL[onTestValue] + "\" is valid yet it failed with \"" + exception.toString() + "\"");
                 }
                 // expected failure
             }
@@ -566,7 +563,7 @@ public class DatatypeFactoryTest {
         try {
             datatypeFactory = DatatypeFactory.newInstance();
         } catch (DatatypeConfigurationException datatypeConfigurationException) {
-            Assert.fail(datatypeConfigurationException.toString());
+            fail(datatypeConfigurationException.toString());
         }
 
         if (DEBUG) {
@@ -594,7 +591,7 @@ public class DatatypeFactoryTest {
                 }
 
                 // unexpected success, should have failed
-                Assert.fail("expected IllegalArgumentException " + "for DatatypeFactory.newXMLGregorianCalendar(" + invalidDates[valueIndex][0] + ", "
+                fail("expected IllegalArgumentException " + "for DatatypeFactory.newXMLGregorianCalendar(" + invalidDates[valueIndex][0] + ", "
                         + invalidDates[valueIndex][1] + ", " + invalidDates[valueIndex][2] + ", " + invalidDates[valueIndex][3] + ", "
                         + invalidDates[valueIndex][4] + ", " + invalidDates[valueIndex][5] + ", " + invalidDates[valueIndex][6] + ", "
                         + invalidDates[valueIndex][7] + ").  " + "Instead, XMLGregorianCalendar: \"" + xmlGregorianCalendar.toString() + "\" was created.");
@@ -627,7 +624,7 @@ public class DatatypeFactoryTest {
                 }
 
                 // unexpected success, should have failed
-                Assert.fail("expected IllegalArgumentException " + "for DatatypeFactory.newXMLGregorianCalendar(" + invalidDates[valueIndex][0] + ", "
+                fail("expected IllegalArgumentException " + "for DatatypeFactory.newXMLGregorianCalendar(" + invalidDates[valueIndex][0] + ", "
                         + invalidDates[valueIndex][1] + ", " + invalidDates[valueIndex][2] + ", " + invalidDates[valueIndex][3] + ", "
                         + invalidDates[valueIndex][4] + ", " + invalidDates[valueIndex][5] + ", " + invalidDates[valueIndex][6] + ", "
                         + invalidDates[valueIndex][7] + ").  " + "Instead, XMLGregorianCalendar: \"" + xmlGregorianCalendar.toString() + "\" was created.");
