@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2014, 2016, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2014, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -33,31 +33,22 @@ import javax.xml.transform.stream.StreamResult;
 import javax.xml.transform.stream.StreamSource;
 
 import org.testng.Assert;
-import org.testng.annotations.BeforeClass;
-import org.testng.annotations.Listeners;
 import org.testng.annotations.Test;
 import org.w3c.dom.Document;
 
 /*
  * @test
- * @bug 6513892
+ * @bug 6513892 8343001
  * @library /javax/xml/jaxp/libs /javax/xml/jaxp/unittest
- * @run testng/othervm -DrunSecMngr=true -Djava.security.manager=allow transform.Bug6513892
  * @run testng/othervm transform.Bug6513892
  * @summary Test the output encoding of the transform is the same as that of the redirect extension.
  */
-@Listeners({jaxp.library.FilePolicy.class})
 public class Bug6513892 {
-    @BeforeClass
-    public void setup(){
-        if (System.getSecurityManager() != null)
-            System.setSecurityManager(null);
-    }
-
     @Test
     public void test0() {
         try {
             TransformerFactory tf = TransformerFactory.newInstance();
+            tf.setFeature("jdk.xml.enableExtensionFunctions", true);
             Transformer t = tf.newTransformer(new StreamSource(getClass().getResourceAsStream("redirect.xsl"), getClass().getResource("redirect.xsl")
                     .toString()));
 
