@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2014, 2019, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2014, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -48,7 +48,6 @@ import javax.xml.transform.stream.StreamSource;
 
 import org.testng.Assert;
 import org.testng.annotations.DataProvider;
-import org.testng.annotations.Listeners;
 import org.testng.annotations.Test;
 
 /*
@@ -61,11 +60,9 @@ import org.testng.annotations.Test;
  * @modules java.xml/com.sun.xml.internal.stream
  * @clean MyXMLInputFactoryImpl MyXMLStreamReader
  * @build MyXMLInputFactoryImpl MyXMLStreamReader
- * @run testng/othervm -DrunSecMngr=true -Djava.security.manager=allow transform.StAXSourceTest
  * @run testng/othervm transform.StAXSourceTest
  * @summary Test parsing from StAXSource.
  */
-@Listeners({jaxp.library.JAXPTestPolicy.class})
 public class StAXSourceTest {
     @DataProvider(name = "xml")
     public Object[][] getData() throws Exception {
