@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2013, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2013, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -25,13 +25,13 @@
  * @test
  * @bug 8013557
  * @summary Tests beans with public fields
- * @run main/othervm -Djava.security.manager=allow Test8013557
+ * @run main/othervm Test8013557
  * @author Sergey Malenkov
  */
 
 public class Test8013557 extends AbstractTest {
     public static void main(String[] args) {
-        new Test8013557().test(true);
+        new Test8013557().test();
     }
 
     protected Object getObject() {
