@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2020, 2024, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2020, 2025, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -27,7 +27,7 @@
  * @summary Test java.lang.management.ThreadMXBean with virtual threads
  * @modules java.base/java.lang:+open java.management
  * @library /test/lib
- * @run junit/othervm VirtualThreads
+ * @run junit/othervm/native --enable-native-access=ALL-UNNAMED VirtualThreads
  */
 
 /**
