@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2020, 2023, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2020, 2026, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -21,48 +21,39 @@
  * questions.
  */
 
-import org.testng.annotations.AfterTest;
-import org.testng.annotations.BeforeTest;
-import org.testng.annotations.DataProvider;
-import org.testng.annotations.Test;
 
 import java.io.IOException;
 import java.net.DatagramPacket;
 import java.net.MulticastSocket;
 import java.net.InetAddress;
 import java.net.InetSocketAddress;
-import java.net.MulticastSocket;
 import java.net.SocketException;
-import java.net.SocketPermission;
-import java.nio.channels.DatagramChannel;
-import java.security.AccessControlException;
-import java.security.Permission;
-import java.security.PermissionCollection;
-import java.security.Permissions;
-import java.security.Policy;
-import java.security.ProtectionDomain;
 
-import static org.testng.Assert.assertThrows;
+import org.junit.jupiter.api.AfterAll;
+
+import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.MethodSource;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertThrows;
 
 /*
  * @test
  * @bug 8243408
  * @summary Check that MulticastSocket throws expected
  *          Exception when sending a DatagramPacket with port 0
- * @run testng/othervm -Djava.security.manager=allow SendPortZero
+ * @run junit/othervm ${test.main.class}
  */
 
 public class SendPortZero {
-    private InetAddress loopbackAddr, wildcardAddr;
-    private MulticastSocket multicastSocket;
-    private DatagramPacket loopbackZeroPkt, wildcardZeroPkt, wildcardValidPkt;
+    private static InetAddress loopbackAddr, wildcardAddr;
+    private static MulticastSocket multicastSocket;
+    private static DatagramPacket loopbackZeroPkt, wildcardZeroPkt, wildcardValidPkt;
 
     private static final Class<SocketException> SE = SocketException.class;
-    private static final Class<AccessControlException> ACE =
-            AccessControlException.class;
 
-    @BeforeTest
-    public void setUp() throws IOException {
+    @BeforeAll
+    public static void setUp() throws IOException {
         multicastSocket = new MulticastSocket();
 
         byte[] buf = "test".getBytes();
@@ -89,51 +80,26 @@ public class SendPortZero {
         wildcardValidPkt.setPort(multicastSocket.getLocalPort());
     }
 
-    @DataProvider(name = "data")
-    public Object[][] variants() {
+    public static Object[][] testCases() throws IOException {
         return new Object[][]{
-                { multicastSocket,       loopbackZeroPkt },
-                { multicastSocket,       wildcardZeroPkt },
+                { new MulticastSocket(),       loopbackZeroPkt },
+                { new MulticastSocket(),       wildcardZeroPkt },
                 // Not currently tested. See JDK-8236807
-                //{ multicastSocket,       wildcardValidPkt }
+                //{ new MulticastSocket(),       wildcardValidPkt }
         };
     }
 
-    @Test(dataProvider = "data")
+    @ParameterizedTest
+    @MethodSource("testCases")
     public void testSend(MulticastSocket ms, DatagramPacket pkt) {
-        assertThrows(SE, () -> ms.send(pkt));
-        assertThrows(SE, () -> ms.send(pkt, (byte) 0));
-    }
-
-    // Check that 0 port check doesn't override security manager check
-    @Test(dataProvider = "data")
-    public void testSendWithSecurityManager(MulticastSocket ms,
-                                            DatagramPacket pkt) {
-        Policy defaultPolicy = Policy.getPolicy();
-        try {
-            Policy.setPolicy(new NoSendPolicy());
-            System.setSecurityManager(new SecurityManager());
-
-            assertThrows(ACE, () -> ms.send(pkt));
-            assertThrows(ACE, () -> ms.send(pkt, (byte) 0));
-        } finally {
-            System.setSecurityManager(null);
-            Policy.setPolicy(defaultPolicy);
+        try (ms) {
+            assertFalse(ms.isClosed());
+            assertThrows(SE, () -> ms.send(pkt));
         }
     }
 
-    static class NoSendPolicy extends Policy {
-        final PermissionCollection perms = new Permissions();
-        { perms.add(
-                new SocketPermission("*:0", "connect")); }
-
-        public boolean implies(ProtectionDomain domain, Permission perm) {
-            return !perms.implies(perm);
-        }
-    }
-
-    @AfterTest
-    public void tearDown() {
+    @AfterAll
+    public static void tearDown() {
         multicastSocket.close();
     }
 }
