@@ -32,7 +32,6 @@
  * @run build NotificationAccessControllerTest
  *
  * @run main/othervm NotificationAccessControllerTest
- * @run main/othervm -Djava.security.manager=allow NotificationAccessControllerTest
  */
 
 import com.sun.jmx.remote.security.NotificationAccessController;
