@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2005, 2018, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2005, 2025, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -29,10 +29,8 @@
  * @library /test/lib ..
  * @modules jdk.crypto.cryptoki
  * @run main/othervm TrustAnchors
- * @run main/othervm -Djava.security.manager=allow TrustAnchors sm policy
  */
 
-import java.io.File;
 import java.security.KeyStore;
 import java.security.Provider;
 import java.security.Security;
@@ -44,9 +42,7 @@ import java.util.TreeSet;
 public class TrustAnchors extends SecmodTest {
 
     public static void main(String[] args) throws Exception {
-        if (initSecmod() == false) {
-            return;
-        }
+        initSecmod();
 
         // our secmod.db file says nssckbi.*so*, so NSS does not find the
         // *DLL* on Windows nor the *DYLIB* on Mac OSX.
@@ -62,12 +58,6 @@ public class TrustAnchors extends SecmodTest {
 
         System.out.println(p);
         Security.addProvider(p);
-
-        if (args.length > 1 && "sm".equals(args[0])) {
-            System.setProperty("java.security.policy",
-                    BASE + File.separator + args[1]);
-            System.setSecurityManager(new SecurityManager());
-        }
 
         KeyStore ks = KeyStore.getInstance("PKCS11", p);
         ks.load(null, null);
